<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/colour1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewC390"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c390"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c203"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c206"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c218"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c235"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/c346"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:id="@+id/textViewG953"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/archivo_black"
        android:padding="16dp"
        android:text="@string/g953"
        android:textAppearance="@android:style/TextAppearance.Medium"/>
</LinearLayout>